# shape-keys

./: Cargo.toml  readme.md
src/: main.rs  shader.wgsl  shape-keys.glb
